--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.5",
     "react-helmet-async": "^1.3.0",
     "react-i18next": "^11.18.6",
+    "react-lazy-load-image-component": "^1.6.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
